Closed
Bug 1643673
Opened 5 years ago
Closed 5 years ago
Crash in [@ nsMIMEInfoWin::LaunchWithFile]
Categories
(Firefox :: File Handling, defect)
Tracking
()
RESOLVED
FIXED
Firefox 79
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox76 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | --- | fixed |
| firefox79 | --- | fixed |
People
(Reporter: calixte, Assigned: jaws)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-22aedf9c-c69e-4078-8aab-ef9ee0200605.
Top 10 frames of crashing thread:
0 xul.dll nsMIMEInfoWin::LaunchWithFile uriloader/exthandler/win/nsMIMEInfoWin.cpp:105
1 xul.dll NS_InvokeByIndex
2 xul.dll static XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1140
3 xul.dll XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:946
4 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:585
5 xul.dll Interpret js/src/vm/Interpreter.cpp:3312
6 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:620
7 xul.dll JS_CallFunctionValue js/src/jsapi.cpp:2777
8 xul.dll nsXPCWrappedJS::CallMethod js/xpconnect/src/XPCWrappedJSClass.cpp:963
9 xul.dll PrepareAndDispatch xpcom/reflect/xptcall/md/win32/xptcstubs.cpp:88
There are 2 crashes (from 2 installations) in nightly 79 starting with buildid 20200604092907. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1632277.
[1] https://hg.mozilla.org/mozilla-central/rev?node=1e4f8d9d96ce
| Reporter | ||
Updated•5 years ago
|
Flags: needinfo?(mstriemer)
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → jaws
Status: NEW → ASSIGNED
| Assignee | ||
Updated•5 years ago
|
Flags: needinfo?(mstriemer)
| Assignee | ||
Comment 1•5 years ago
|
||
| Assignee | ||
Updated•5 years ago
|
Component: PDF Viewer → File Handling
Pushed by jwein@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b9d9cb83485d
Guard against a null default application. r=tkikuchi
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 79
Updated•5 years ago
|
status-firefox-esr68:
--- → unaffected
Comment 4•5 years ago
|
||
Comment on attachment 9154628 [details]
Bug 1643673 - Guard against a null default application.
Beta/Release Uplift Approval Request
- User impact if declined: This fixes a potential Windows 7 crash in bug 1632277 (to be uplifted).
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: Bug 1632277
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This is a simple null check addition to bug 1632277 to avoid a potential crash on Windows 7. There were 6 crashes in 2 days prior to this patch landing on Nightly and none in the 3 days since.
- String changes made/needed: No
Attachment #9154628 -
Flags: approval-mozilla-beta?
Updated•5 years ago
|
Comment 5•5 years ago
|
||
Comment on attachment 9154628 [details]
Bug 1643673 - Guard against a null default application.
approved for 78.0b6
Attachment #9154628 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 6•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•