Bug 1643673 - Guard against a null default application. r=tkikuchi, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D78551